--- a/Backend/package.json
+++ b/Backend/package.json
@@ -19,6 +19,7 @@
     "dotenv": "^17.2.3",
     "express": "^5.2.1",
     "jsonwebtoken": "^9.0.3",
+    "moment": "^2.30.1",
     "mongoose": "^9.1.4",
     "multer": "^2.0.2",
     "node-fetch": "^3.3.2",
